argocd/applications/kubernetes-dashboard/dashboard-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-nodeport
  namespace: kubernetes-dashboard
spec:
  type: NodePort
  ports:
  - port: 443
    targetPort: 8443
    nodePort: 30507
    protocol: TCP
    name: https
  selector:
    app.kubernetes.io/name: kubernetes-dashboard
    app.kubernetes.io/component: web
