argocd/applications/kubernetes-dashboard/kong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-kong-nodeport
  namespace: kubernetes-dashboard
  labels:
    app.kubernetes.io/name: kubernetes-dashboard
    app.kubernetes.io/component: kong
spec:
  type: NodePort
  ports:
  - port: 443
    targetPort: 8445
    nodePort: 30507
    protocol: TCP
    name: https
  selector:
    app.kubernetes.io/name: kubernetes-dashboard
    app.kubernetes.io/component: kong
